fix wrong key caching and eleminate duplicate String creation between actors