@@ -16,5 +16,5 @@
 #
 
 sdk use java 21.0.1-graal
-JAVA_OPTS="--enable-preview -Xms512m"
+JAVA_OPTS="-Xms1g -Xmx1g"
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_yavuztas
